<resources>
    <string name="app_name">FitMiyim</string>
    <string name="baslik">FitMiyim BMI Calculator</string>
    <string name="yas">Age</string>
    <string name="boy">Height (kg)</string>
    <string name="kilo">Weight (kg)</string>
    <string name="hesapla">Calculate</string>
    <string name="fitmisin">Are you fit?</string>
    <string name="evet">Yes!</string>
    <string name="hayir">No!</string>
    <string name="cevap3">Result: You are above your ideal weight.\n\nIndicates that you are overweight for your height. Being overweight leads to obesity, which is a risk factor for many diseases, unless necessary precautions are taken.</string>
    <string name="cevap4">Result: Extremely Obese.\n\nIt is an indication that you are overweight for your height, in other words, that you are fat. Obesity, cardiovascular diseases, diabetes, hypertension etc. is a risk factor for chronic diseases. It is very important for your health that you go to a normal weight by weakening under the control of a physician / dietitian by applying to a health institution. Please contact your healthcare provider.</string>
    <string name="lutfenYas">Please enter your age!</string>
    <string name="lutfenBoy">Please enter your height!</string>
    <string name="bmi">Your body mass index</string>
    <string name="cevap1">Result: You are below your ideal weight.\n\nIt shows that you are not in the appropriate weight for your height and that you are weak. Weakness is an undesirable condition that poses a risk for some diseases. In order to reach a weight suitable for your height, you should eat adequate and balanced nutrition and take care to improve your eating habits.</string>
    <string name="cevap2">Result: Your weight is completely normal.\n\nIndicates that you are the appropriate weight for your height. Take care to maintain this weight by eating a sufficient and balanced diet and doing regular physical activity.</string>
    <string name="lutfenKilo">Please enter your weight!</string>
    //TESTADDS
<!--        <string name="appid" translatable="false">ca-app-pub-3940256099942544~3347511713</string>-->
<!--        <string name="interstatialAds" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->

    //REALADDS
    <string name="appid" translatable="false">ca-app-pub-8946455145480386~8196557785</string>
    <string name="interstatialAds" translatable="false">ca-app-pub-8946455145480386/6999026185</string>

</resources>