<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_main_baslik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:drawableStart="@drawable/sun"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="10"
                android:text="@string/baslik"
                android:textAlignment="center"
                android:textSize="34sp"
                app:drawableTintMode="multiply" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="30dp"
                app:srcCompat="@drawable/running" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_wc_24"
                android:text="Cinsiyet seçin"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="gone" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_main_erkek"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/erkeko" />

                    <ImageView
                        android:id="@+id/iv_main_kadin"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/kadin" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_main_erkekbtn"
                        android:layout_width="10dp"
                        android:layout_height="30dp"
                        app:srcCompat="@android:drawable/checkbox_on_background" />

                    <ImageView
                        android:id="@+id/iv_main_kadinbtn"
                        android:layout_width="10dp"
                        android:layout_height="30dp"
                        app:srcCompat="@android:drawable/checkbox_off_background" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/tv_main_lutfen_yas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/lutfenYas"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="#F44336"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_main_yas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:alpha=".8"
                android:background="@android:drawable/editbox_background"
                android:drawableStart="@drawable/ic_baseline_double_arrow_24"
                android:hint="@string/yas"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:padding="20dp"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_main_lutfen_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/lutfenBoy"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="#F44336"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_main_boy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:alpha=".8"
                android:background="@android:drawable/editbox_background"
                android:drawableStart="@drawable/ic_baseline_double_arrow_24"
                android:hint="@string/boy"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:padding="20dp"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_main_lutfen_kilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/lutfenKilo"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="#F44336"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_main_kilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:alpha=".8"
                android:background="@android:drawable/editbox_background"
                android:drawableStart="@drawable/ic_baseline_double_arrow_24"
                android:hint="@string/kilo"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:padding="20dp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_main_hesapla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="90dp"
                android:alpha=".8"
                android:padding="20dp"
                android:shadowColor="#000000"
                android:text="@string/hesapla"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#FFFFFF"
                app:cornerRadius="50dp"
                app:icon="@drawable/ic_baseline_calculate_24"
                app:iconTint="#000000"
                app:iconTintMode="add"
                app:rippleColor="#FFC107"
                app:strokeColor="#000000"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btn_main_playstore"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:alpha=".8"
                android:shadowColor="#000000"
                android:text="playstore"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="50dp"
                app:icon="@drawable/ic_baseline_play_arrow_24"
                app:iconTint="#FFFFFF"
                app:rippleColor="#FFC107"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>